include/hyperdex/admin.h

struct hyperdex_admin;
struct hyperdex_admin_perf_counter
{
    uint64_t id;
    uint64_t time;
    const char* property;
    uint64_t measurement;
};
/* hyperdex_admin_returncode occupies [8704, 8832) */
enum hyperdex_admin_returncode
{
    HYPERDEX_ADMIN_SUCCESS     = 8704,

    /* Error conditions */
    HYPERDEX_ADMIN_NOMEM       = 8768,
    HYPERDEX_ADMIN_NONEPENDING = 8769,
    HYPERDEX_ADMIN_POLLFAILED  = 8770,
    HYPERDEX_ADMIN_TIMEOUT     = 8771,
    HYPERDEX_ADMIN_INTERRUPTED = 8772,
    HYPERDEX_ADMIN_SERVERERROR = 8773,
    HYPERDEX_ADMIN_COORDFAIL   = 8774,
    HYPERDEX_ADMIN_BADSPACE    = 8775,
    HYPERDEX_ADMIN_DUPLICATE   = 8776,
    HYPERDEX_ADMIN_NOTFOUND    = 8777,
    HYPERDEX_ADMIN_LOCALERROR  = 8778,

    /* This should never happen.  It indicates a bug */
    HYPERDEX_ADMIN_INTERNAL    = 8829,
    HYPERDEX_ADMIN_EXCEPTION   = 8830,
    HYPERDEX_ADMIN_GARBAGE     = 8831
};
struct hyperdex_admin*
hyperdex_admin_create(const char* coordinator, uint16_t port);
void
hyperdex_admin_destroy(struct hyperdex_admin* admin);
int64_t
hyperdex_admin_dump_config(struct hyperdex_admin* admin,
                           enum hyperdex_admin_returncode* status,
                           const char** config);
int64_t
hyperdex_admin_wait_until_stable(struct hyperdex_admin* admin,
                                 enum hyperdex_admin_returncode* status);
int64_t
hyperdex_admin_add_space(struct hyperdex_admin* admin,
                         const char* description,
                         enum hyperdex_admin_returncode* status);
int64_t
hyperdex_admin_rm_space(struct hyperdex_admin* admin,
                        const char* space,
                        enum hyperdex_admin_returncode* status);
int64_t
hyperdex_admin_list_spaces(struct hyperdex_admin* admin,
                           enum hyperdex_admin_returncode* status,
                           const char** spaces);
int64_t
hyperdex_admin_add_index(struct hyperdex_admin* admin,
                         const char* space,
                         const char* attribute,
                         enum hyperdex_admin_returncode* status);
int64_t
hyperdex_admin_rm_index(struct hyperdex_admin* admin,
                        uint64_t idxid,
                        enum hyperdex_admin_returncode* status);
int64_t
hyperdex_admin_enable_perf_counters(struct hyperdex_admin* admin,
                                    enum hyperdex_admin_returncode* status,
                                    struct hyperdex_admin_perf_counter* pc);
void
hyperdex_admin_disable_perf_counters(struct hyperdex_admin* admin);
int64_t
hyperdex_admin_loop(struct hyperdex_admin* admin, int timeout,
                    enum hyperdex_admin_returncode* status);